creusot/tests/should_fail/prusti/calls/lft_constraint.stderr
error[creusot]: signature uses the state `'a` in a constraint but not for any argument
 --> lft_constraint.rs:9:9
  |
9 | #[logic('curr where 'a: 'b)]
  |         ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

